# DevWP

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  TEST-STATUS.md  TESTING.md  biome.json  compose.yml  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vitest.config.integration.ts  vitest.config.main.ts  vitest.config.renderer.ts  vitest.config.ts
.github/: CERTIFICATE_SETUP.md  FUNDING.yml  copilot-instructions.md
.github/agents/: code-quality.agent.md  maintain-tests.agent.md
.github/workflows/: aur-deploy.yml  pr.yml  release.yml  test.yml  tests.yml  update-deps.yml
.kilo/plans/: devwp-improvements.md
aur/: .SRCINFO  .gitignore  PKGBUILD  README.md  devwp-bin.install  inspect-appimage.sh  update-checksum.sh
config/certs/: ca-key.pem  ca.pem  ca.srl  cert.pem  key.csr  key.pem
docs/: aur-deployment-quick-start.md  aur-deployment-setup.md  aur-release-guide.md  certificate-trust-setup.md  database-storage.md  docker-health-check-fix.md  improvements-implementation.md  integration-testing-guide.md  quick-reference.md  release-checklist.md  settings-implementation.md  tauri-architecture.md  testing-guide.md  testing-quick-reference.md  testing.md  vitest-setup-summary.md  xdebug-setting.md
scripts/: regenerate-nginx-configs.ts  setup-certs.sh  trust-certificate.sh  verify-packaged-deps.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: docker.rs  lib.rs  main.rs  utils.rs
(+147 files in other folders)
