[package]
name = "devwp"
version = "0.1.1"
description = "DevWP Tauri backend"
authors = ["Trewhitt"]
edition = "2021"

[lib]
name = "devwp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2.0.0"

